// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeRaisedSuccess should render correctly for buyer 1`] = `
<PeachText
  style={
    {
      "marginBottom": 12,
    }
  }
>
  The seller and the mediator have been notified. Keep an eye on the chat!
</PeachText>
`;

exports[`DisputeRaisedSuccess should render correctly for seller 1`] = `
<PeachText
  style={
    {
      "marginBottom": 12,
    }
  }
>
  The buyer and the mediator have been notified. Keep an eye on the chat!
</PeachText>
`;
